--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: people.py",
+            "type": "python",
+            "request": "launch",
+            "program": "./people.py",
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
             "name": "Python: people_with_comments.py",
             "type": "python",
             "request": "launch",
@@ -13,10 +21,10 @@
             "justMyCode": true
         },
         {
-            "name": "Python: people.py",
+            "name": "Python: people_with_print_statements.py",
             "type": "python",
             "request": "launch",
-            "program": "./people.py",
+            "program": "./people_with_print_statements.py",
             "console": "integratedTerminal",
             "justMyCode": true
         },
