--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 local_things*
+.vscode/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
